# fastapi-genai-gemini

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/ai/: base.py  gemini.py
src/auth/: auth.py  throttling.py
src/prompts/: system_prompt.md
src/schemas/: pydantic.py
